--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,11 @@
 
-/* for the font roboto*/
-@font-face { 
-    font-family: 'Roboto'; 
-    src: url('https://fonts.googleapis.com/css2?family=Roboto&display=swap'); 
-  } 
-
 
 
 
 
 
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Arial", sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -132,7 +126,7 @@ nav {
     overflow: hidden;
     width: 100%;
     margin-right: 100px;
-    font-family: "Roboto", sans-serif;
+    font-family: "Arial", sans-serif;
     font-weight: 100;
     z-index: 9999;
 }
