--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,9 @@
 
+
+
+
+
+
 body {
     font-family: "Arial", sans-serif;
     margin: 0;
@@ -6,6 +11,7 @@ body {
     box-sizing: border-box;
     padding-top: 100px;
 }
+
 
 main {
     flex: 1 0 auto; /* This will push the footer down */
@@ -100,6 +106,12 @@ li {
     margin-bottom: 20px;
 }
 
+
+
+
+
+
+
 /*Nav bar at the top*/
 nav {
     top: 0%;
@@ -168,6 +180,7 @@ nav {
 }
 
 /*footer*/
+
 #page-container {
     display: flex;
     flex-direction: column;
@@ -184,4 +197,48 @@ nav {
     text-align: center;
     padding: 10px 0;
     
+}
+
+/* TABLES */
+table {
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+table, th, td {
+    border-collapse: collapse;
+    border: 1px solid #000;
+}
+
+th, td {
+    padding: 10px;
+}
+
+/* HEADER */
+header {
+    padding: 10px;
+    text-align: center;
+    background-color: #FF0000;
+    color: white;
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: -22px;
+}
+
+/* CUSTOMER FORM */
+.form-box {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    justify-content: center;
+}
+
+.form-box button, #edit-row-btn {
+    grid-column: span 2;
+}
+
+#edit-customer {
+    padding: 20px;
+    position: absolute;
+    backdrop-filter: invert(.7);
 }
