--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,16 @@
 
-
-
-
-
-
 body {
     font-family: "Arial", sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     padding-top: 100px;
+    overflow-x: hidden;
 }
 
+.home {
+    background-image: url('https://media.wired.com/photos/631277a6ba2a66af641b132a/16:9/w_2400,h_1350,c_limit/YouTube-Premium-Perks-Gear-Alamy-2F8A813.jpg');
+}
 
 main {
     flex: 1 0 auto; /* This will push the footer down */
@@ -21,7 +20,6 @@ main {
 .centered-container {
     display: flex;
     flex-direction: column;
-    
     align-items: center;
     justify-content: center;
     height: auto; /* Full viewport height */
@@ -205,9 +203,17 @@ table {
     margin-bottom: 20px;
 }
 
+#listShirts {
+    margin-top: 20px;
+}
+
 table, th, td {
     border-collapse: collapse;
     border: 1px solid #000;
+}
+
+th {
+    background-color: #CCCCCC;
 }
 
 th, td {
@@ -240,5 +246,56 @@ header {
 #edit-customer {
     padding: 20px;
     position: absolute;
-    backdrop-filter: invert(.7);
+    background-color: white;
+}
+
+/* YOUTUBERS DISPLAY */
+.yt {
+    height: 100px;
+    width: 150px;
+    text-align: center;
+    border: 2px solid #CCCCCC;
+    margin: 10px;
+}
+
+/* Home page info */
+#pageInfo {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: auto;
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-transform: uppercase;
+    letter-spacing: 5px;
+}
+
+#info2 {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: auto;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    position: absolute;
+    top: 70%;
+    left: 52%;
+    transform: translate(-50%, -50%);
+    color: black;
+    text-decoration: none;
+    font-size: 30px;
+}
+
+#info2:hover {
+    color: red;
+    background-color: transparent;
+    text-decoration: wavy underline;
+}
+
+#info2:visited {
+    color: whitesmoke;
+    background-color: transparent;
+    text-decoration: none;
 }
