--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,4 @@
 
-
-
-
-
-
 body {
     font-family: "Arial", sans-serif;
     margin: 0;
@@ -54,6 +49,7 @@ form {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align:center;
 }
 
 input[type="text"] {
@@ -106,13 +102,7 @@ li {
     margin-bottom: 20px;
 }
 
-
-
-
-
-
-
-/*Nav bar at the top*/
+/* TOP NAVIGATION BAR */
 nav {
     top: 0%;
     height: 70px;
@@ -179,8 +169,7 @@ nav {
     color: #CCCCCC; /* Lighter shade for hover effect */
 }
 
-/*footer*/
-
+/* FOOTER */
 #page-container {
     display: flex;
     flex-direction: column;
